5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1716_2498.log
== TEST (2019-05-09 16:46:36) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
ha_1=0
hb_1=0
anos=0
while(ha_1 < hb_2):
	ha_1=ha + pa/100
	hb_1=hb + pb/100
	anos=anos+1
print(anos)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(ha_1 < hb_2):
NameError: name 'hb_2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:47:17) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
ha_1=0
hb_1=0
anos=0
while(ha<hb):
	ha_1=ha + pa/100
	hb_1=hb + pb/100
	anos=anos+1
print(anos)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(ha_1 < hb_2):
NameError: name 'hb_2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:47:55) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
ha_1=0
hb_1=0
anos=0
while(ha<hb):
	ha_1=ha + pa/100
	hb_1=hb + pb/100
	anos=anos+1

print(anos)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(ha_1 < hb_2):
NameError: name 'hb_2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:48:06) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
ha_1=0
hb_1=0
anos=0
while(ha<hb):
	ha_1=ha + pa/100
	hb_1=hb + pb/100
	anos=anos+1

print(anos)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(ha_1 < hb_2):
NameError: name 'hb_2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:49:14) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
ha_1=0
hb_1=0
anos=0
while(ha<hb):
	ha_1=ha + pa/100
	hb_1=hb + pb/100
	anos=anos+1

print(anos)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(ha_1 < hb_2):
NameError: name 'hb_2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:49:38) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
ha_1=0
hb_1=0
anos=0
while(ha<hb):
	ha_1=ha + pa/100
	hb_1=hb + pb/100
	anos=anos+1

print(anos)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(ha_1 < hb_2):
NameError: name 'hb_2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:50:07) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
ha_1=0
hb_1=0
anos=0
while(ha<hb):
	ha_1=ha + pa/100
	hb_1=hb + pb/100
	anos=anos+1


	
	
print(anos)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(ha_1 < hb_2):
NameError: name 'hb_2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:10:44) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
ha_1=0
hb_1=0
anos=0
while(ha<hb):
	ha_1=ha + pa/100
	hb_1=hb + pb/100
	anos=anos+1


	
	
print(anos)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(ha_1 < hb_2):
NameError: name 'hb_2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:11:22) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
ha_1=0
hb_1=0
anos=0
while(ha<hb):
	ha_1=ha + pa/100
	hb_1=hb + pb/100
	anos=anos+1
print(ha)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(ha_1 < hb_2):
NameError: name 'hb_2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:11:36) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
ha_1=0
hb_1=0
anos=0
while(ha<hb):
	ha_1=ha + pa/100
	hb_1=hb + pb/100
	anos=anos+1
print(anos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(ha_1 < hb_2):
NameError: name 'hb_2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:12:20) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
ha_1=0
hb_1=0
a=0
while(ha<hb):
	ha_1=ha + pa/100
	hb_1=hb + pb/100
	a=a+1
print(a)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(ha_1 < hb_2):
NameError: name 'hb_2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:12:26) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
ha_1=0
hb_1=0
a=0
while(ha<hb):
	ha_1=ha + pa/100
	hb_1=hb + pb/100
	a=a+1
print(a)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(ha_1 < hb_2):
NameError: name 'hb_2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:12:34) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
ha_1=0
hb_1=0
a=0
while(ha<hb):
	ha_1=ha + pa/100
	hb_1=hb + pb/100
	a=a+1
print(a)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(ha_1 < hb_2):
NameError: name 'hb_2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:12:52) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
ha_1=0
hb_1=0
a=0
while(ha<hb):
	ha_1=ha + pa/100
	hb_1=hb + pb/100
	a=a+1
print(hb)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(ha_1 < hb_2):
NameError: name 'hb_2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:13:07) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
ha_1=0
hb_1=0
var=0
while(ha<hb):
	ha_1=ha + pa/100
	hb_1=hb + pb/100
	a=a+1
print(hb)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    a=a+1
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:13:32) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
ha_1=0
hb_1=0
var=0
while(ha<hb):
	ha_1=ha + pa/100
	hb_1=hb + pb/100
	var=var+1
print(hb)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    a=a+1
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:14:23) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
ha1=0
hb1=0
var=0
while(ha<hb):
	ha1=ha + pa/100
	hb1=hb + pb/100
	var=var+1
print(var)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    a=a+1
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:14:40) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
ha1=0
hb1=0
var=0
while(ha<hb):
	ha1=ha + pa/100
	hb1=hb + pb/100
	var=var+1
	print(var)	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:15:11) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
ha1=0
hb1=0
var=0
while(ha<hb):
	ha1=ha + pa/100
	hb1=hb + pb/100
	var=var+1
print(var)	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:11:43) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
var=0
ha1=0
hb1=0
while(ha>=hb):
	ha1=ha + pa/100
	hb1=hb + pb/100
	var=var+1
print(var)	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:12:54) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
var=0
ha1=0
hb1=0
while(ha1<hb1):
	ha1=ha + pa/100
	hb1=hb + pb/100
	var=var+1
print(var)	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:01:28) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
var=0
ha1=ha
hb1=hb
while(ha<hb):
	ha1=ha + pa/100
	hb1=hb + pb/100
	var=var+1
print(var)	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:02:55) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
var=0
ha1=ha
hb1=hb
while(ha<hb):
	ha1=ha * (pa/100)
	hb1=hb * (pb/100)
	var=var+1
print(var)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:03:39) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
anos=0
ha1=ha
hb1=hb
while(ha<hb):
	ha1=ha * (pa/100)
	hb1=hb * (pb/100)
	anos=anos+1
print(anos)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:04:02) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
anos=0
ha1=ha
hb1=hb
while(ha<hb):
	ha1=ha * (pa/100)
	hb1=hb * (pb/100)
	anos=anos+1
print(ha)
print(hb)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:04:47) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
anos=0
ha1=ha
hb1=hb
while(ha<hb):
	ha1=ha * (pa/100)
	hb1=hb * (pb/100)
	anos=anos+1

	
	
	
	
	
print(hb)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:27:14) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
anos=0
ha1=ha
hb1=hb
while(ha1<hb1):
	ha1=ha * (pa/100)
	hb1=hb * (pb/100)
	anos=anos+1

print(hb)
-- OUTPUT:
580000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:27:25) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
anos=0
ha1=ha
hb1=hb
while(ha1<hb1):
	ha1=ha * (pa/100)
	hb1=hb * (pb/100)
	anos=anos+1

print(hb1)
-- OUTPUT:
60900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:27:44) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
anos=0
ha1=ha
hb1=hb
while(ha1<hb1):
	ha1=ha * (pa/100)
	hb1=hb * (pb/100)
	anos=anos+1

print(anos)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:28:38) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
anos=0
ha1=ha
hb1=hb
while(ha1<hb1):
	ha1=ha1 + ha1 * (pa/100)
	hb1=hb1 + hb1 * (pb/100)
	anos=anos+1

print(anos)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:28:59) 
-- CODE:
ha=float(input("No de habitantes da cidade A: "))
hb=float(input("No de habitantes da cidade B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
anos=0
ha1=ha
hb1=hb
while(ha1<hb1):
	ha1=ha1 + ha1 * (pa/100)
	hb1=hb1 + hb1 * (pb/100)
	anos=anos+1

print(anos)
-- EXECUTION TIME:
0.159209
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
